# taranga-plus

./: .gitignore  AUDIT_REPORT.md  README.md  electron.vite.config.ts  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.worker.json  vite.config.ts  চালু.bat
.github/scripts/: validate-channels.mjs
.github/workflows/: validate-channels.yml
backend/: App.xaml  App.xaml.cs  Backend.cs  MainWindow.xaml  MainWindow.xaml.cs  TarangaPlus.Backend.csproj  package.json  wrangler.toml
data/: channels.json
dist-electron/: main.js
dist-electron/hardware/: gpuAccel.js
dist-electron/ipc/: handlers.js
frontend/: index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.renderer.json  tsconfig.worker.json
frontend/public/: sw.js
frontend/src/: App.tsx
public/: sw.js
raw/: README.md  preview.html  run-app.bat
scripts/: Run Taranga+ Electron.bat
src/: App.tsx
src-electron/hardware/: gpuAccel.ts
src-electron/ipc/: handlers.ts
src-electron/main/: index.ts
src-electron/preload/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/animations/: variants.ts
src/components/: InteractiveGradientBackground.tsx
src/context/: WindowLayoutContext.tsx
src/hooks/: useChannels.ts  useFavorites.ts  useLenis.ts  usePlayer.ts  (+1 more)
validate/: .gitignore  dedupe.go  dedupe_test.go  go.mod  m3u.go  m3u_test.go  main.go  mpegts.go  mpegts_test.go  report.go  sources.go  validate.mjs  validator.go  validator_test.go
(+90 files in other folders)
