[package]
name = "taranga-plus"
version = "2.0.0"
description = "Taranga+ — Bangla-first live TV streaming desktop app"
edition = "2021"

[lib]
name = "taranga_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
